Traditional game implemented

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link rel="icon" type="image/svg" href="images/favicon.svg" />
-    <script type="module" src="scripts/Test.js"></script>
+    <script type="module" src="scripts/GUI.js"></script>
 </head>
 
 <body>
@@ -18,15 +18,20 @@
     <p>Board size: <input type="number" id="size" value="8" min="4" step="2" /> <input type="button" value="Start"
             id="start" /></p>
     <p id="message"></p>
-    <table id="scores">
+    <table id="score">
         <caption>Scores</caption>
         <thead>
             <tr>
-                <td>Player 1</td>
-                <td>Player 2</td>
+                <th>Player 1</th>
+                <th>Player 2</th>
             </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
     </table>
 </body>
 
