Chage style of selected cells

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <caption>Leap Frog</caption>
         <tbody></tbody>
     </table>
-    <p>Board size: <input type="number" id="size" value="6" min="4" step="2" /> <input type="button" value="Start"
+    <p>Board size: <input type="number" id="size" value="6" min="4" /> <input type="button" value="Start"
             id="start" /></p>
     <p id="message"></p>
     <table id="score">
