Allow the user to choose the rules of the game

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
         <caption>Leap Frog</caption>
         <tbody></tbody>
     </table>
-    <p>Board size: <input type="number" id="size" value="6" min="4" /> <input type="button" value="Start"
-            id="start" /></p>
+    <p>Rules: 
+        <select id="rules">
+        </select>
+    </p>
+    <p>Board size: <input type="number" id="size" value="6" min="4" /> <input type="button" value="Start" id="start" />
+    </p>
     <p id="message"></p>
     <table id="score">
         <caption>Scores</caption>
